<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category_overview"
        app:layout_constraintEnd_toStartOf="@id/guideline_33_pc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_pet_name"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pet_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_33_pc"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_pet_breed"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pet_breed"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_33_pc"
        app:layout_constraintTop_toBottomOf="@id/edit_pet_name" />
    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        android:dropDownWidth="128dp"
        android:tooltipText="Gender select"
        app:layout_constraintStart_toEndOf="@id/guideline_33_pc"
        app:layout_constraintTop_toBottomOf="@id/edit_pet_breed" />

    <TextView
        android:id="@+id/randomIdGender"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_gender" />

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category_measurement"
        app:layout_constraintEnd_toStartOf="@id/guideline_33_pc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_pet_weight" />

    <EditText
        android:id="@+id/edit_pet_weight"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pet_weight"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_33_pc"
        app:layout_constraintTop_toBottomOf="@id/spinner_gender" />

    <TextView
        android:id="@+id/label_weight_units"
        style="@style/EditorUnitsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_pet_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_pet_weight"
        app:layout_constraintTop_toBottomOf="@id/spinner_gender" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_33_pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <Button
        android:id="@+id/button_teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:text="Teste"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pet_weight"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>